# anitaTelem

./: AnitaAuxiliaryHandler.cxx  AnitaAuxiliaryHandler.h  AnitaCmdEchoHandler.cxx  AnitaCmdEchoHandler.h  AnitaFileHandler.cxx  AnitaFileHandler.h  AnitaGenericHeaderHandler.cxx  AnitaGenericHeaderHandler.h  AnitaGpsHandler.cxx  AnitaGpsHandler.h  AnitaGpuHandler.cxx  AnitaGpuHandler.h  AnitaHeaderHandler.cxx  AnitaHeaderHandler.h  AnitaHkHandler.cxx  AnitaHkHandler.h  AnitaMonitorHandler.cxx  AnitaMonitorHandler.h  AnitaSlowRateHandler.cxx  AnitaSurfHkHandler.cxx  AnitaSurfHkHandler.h  AnitaTurfRateHandler.cxx  AnitaTurfRateHandler.h  CMakeLists.txt  LinkDef.h  Makefile  Makefile.legacy  README.md  checkIfRunNeedsProcessing.py  copyCmdSendFromTdrss.sh  justUpdateHkForRun.py  lazyTelemProcess.sh  makeRunNumberMap.C  newTelemFileWatcher.py  processTelemFile.cxx  rawWebDict.h  remakeEventFiles.sh  rootAndJsonFileLoop.sh  setupAwareVariablesForTelem.sh  setupAwareVariablesForTelemAnitarf.sh  (+11 more)
include/: AnitaAuxiliaryHandler.h  AnitaFileHandler.h  AnitaGenericHeaderHandler.h  AnitaGpsHandler.h  AnitaHeaderHandler.h  AnitaRTLHandler.h  AnitaSlowRateHandler.h  AnitaTuffHandler.h  AnitaTurfRateHandler.h  plotUtils.h
programs/: CMakeLists.txt  processTelemFile.cxx  rawWebPlotter.cxx  reprocessHighRate.cxx
python/: processTdrssFile.py  tdrss.py
src/: AnitaCmdEchoHandler.cxx  AnitaFileHandler.cxx  AnitaGenericHeaderHandler.cxx  AnitaGpsHandler.cxx  AnitaHeaderHandler.cxx  AnitaHkHandler.cxx  AnitaMonitorHandler.cxx  AnitaRTLHandler.cxx  AnitaSlowRateHandler.cxx  plotUtils.cxx  (+1 more)
